# autoacap

./: .gitignore  CLAUDE.md  README.md  evaluate.sh  program.md  results.tsv
benchmark/scripts/: capture_benchmark.sh  collect_metrics.sh  compute_map.py  sustained_test.sh
deploy/: deploy_eap.sh  reboot_camera.sh  start_app.sh  stop_app.sh
results/: sustained_c.tsv  sustained_rust.tsv
src/c/: Dockerfile  Makefile  app.c  manifest.json
src/rust/: Cargo.toml  Dockerfile  Makefile
src/rust/src/: main.rs
