[package]
name = "autoacap"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axis ACAP FFI bindings — pinned to known-good commit
larod-sys = { git = "https://github.com/AxisCommunications/acap-rs", rev = "f8bc9c76" }
vdo-sys = { git = "https://github.com/AxisCommunications/acap-rs", rev = "f8bc9c76" }
acap-logging = { git = "https://github.com/AxisCommunications/acap-rs", rev = "f8bc9c76" }

# GLib types — vdo-sys re-exports are private in this pinned rev
glib-sys = "0.20"
gobject-sys = "0.20"

# Serialization for metrics/detection output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"

# Signal handling
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
